--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
 title: [GEOG5003M Assignment 1]
-description: [Weekly practical outputs]
+# description: [Weekly practical outputs]
